Fixed alignment of Call to Action button.

--- a/style.css
+++ b/style.css
@@ -43,12 +43,13 @@ header.startup h1 {
 }
 
 .btn-xl {
-  padding: 1rem 2rem; 
+  padding: 1rem 2rem;
 }
 
 .btn-primary {
   background-color: #F05F44;
-  border-color: #F05F44; }
+  border-color: #F05F44; 
+}
 
 .btn-primary:hover {
   background-color: #ee4b08;
@@ -56,4 +57,3 @@ header.startup h1 {
   border-width: 5px;
   cursor: pointer;
 }
-  
